charts/universal-chart/results/sample.yml
---
# Source: universal-chart/templates/svc.yml
kind: Service
apiVersion: v1
metadata:
  name: sample-api
  namespace: "default"
  labels:
    app.kubernetes.io/name: sample
    app.kubernetes.io/instance: test
    helm.sh/chart: universal-chart-2.0.0
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app.kubernetes.io/name: sample
    app.kubernetes.io/instance: test
---
# Source: universal-chart/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-api
  namespace: default
  labels:
    app.kubernetes.io/name: sample
    app.kubernetes.io/instance: test
    helm.sh/chart: universal-chart-2.0.0
    app.kubernetes.io/managed-by: Helm
  annotations:    
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sample
      app.kubernetes.io/instance: test
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sample
        app.kubernetes.io/instance: test
      annotations:
        checksum/envs: '2347281ba83a94909858f822c4013a66c1092a02692edadbaf1a14b5cc24c90d'
        checksum/nginx-conf: '779ba1a7c7293982cfffe0a2b3fa74cb9be799fee1c0f6e698a75671c0938d8a'
        checksum/secret-envs: '214d1657985c1fa6165e2a5e9c51a4b5df815a55cf2025116ae7ad5b312fe408'
    spec:
      affinity:
        nodeAffinity:
          {}
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/name: sample
                  app.kubernetes.io/instance: test
              namespaces:
              - "default"
              topologyKey: kubernetes.io/hostname
            weight: 1
      
      containers:
      - name: api
        image: busybox:latest
        imagePullPolicy: Always                
        ports:
        - containerPort: 8000
          name: http
        resources:
          limits:
            cpu: 250m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
        volumeMounts:
        
          []
      - name: nginx
        image: nginx:1.20-alpine
        imagePullPolicy: IfNotPresent                
        ports:
        - containerPort: 8080
          name: http
        resources:
          limits:
            cpu: 200m
            memory: 64Mi
          requests:
            cpu: 10m
            memory: 32Mi
        volumeMounts:
        - mountPath: /etc/nginx/nginx.conf
          name: nginx-conf
          subPath: nginx.conf
        
        
      volumes:      
      - name: nginx-conf
        configMap:
          name: sample-nginx-conf
          items:
          - key: nginx.conf
            path: nginx.conf
---
# Source: universal-chart/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-local.test
  namespace: "default"
  labels:
    app.kubernetes.io/name: sample
    app.kubernetes.io/instance: test
    helm.sh/chart: universal-chart-2.0.0
    app.kubernetes.io/managed-by: Helm
  annotations:    
spec:
  rules:
  - host: local.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sample-api
            port:
              number: 80
